--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "boorawler",
   "version": "1.0.0",
   "description": "부롤러 2021",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "electron ."
   },
   "repository": {
     "type": "git",
@@ -18,5 +19,8 @@
   "homepage": "https://github.com/qwerty2944/Boorawler#readme",
   "dependencies": {
     "puppeteer": "^9.0.0"
+  },
+  "devDependencies": {
+    "electron": "^12.0.5"
   }
 }
