--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
   },
   "homepage": "https://github.com/qwerty2944/Boorawler#readme",
   "dependencies": {
+    "axios": "^0.21.1",
+    "cheerio": "*",
+    "electron-root-path": "^1.0.16",
     "puppeteer": "^9.0.0"
   },
   "devDependencies": {
