--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
     "axios": "^0.21.1",
     "cheerio": "*",
     "electron-root-path": "^1.0.16",
-    "puppeteer": "^9.0.0"
+    "iconv": "^3.0.0",
+    "iconv-lite": "^0.4.24",
+    "puppeteer": "^9.0.0",
+    "request": "^2.88.2",
+    "sanitize-html": "^2.3.3"
   },
   "devDependencies": {
     "electron": "^12.0.5"
