--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "electron ."
+    "start": "electron .",
+    "server": "nodemon server"
   },
   "repository": {
     "type": "git",
@@ -20,9 +21,12 @@
   "dependencies": {
     "axios": "^0.21.1",
     "cheerio": "*",
+    "ejs": "^3.1.6",
     "electron-root-path": "^1.0.16",
+    "express": "^4.17.1",
     "iconv": "^3.0.0",
     "iconv-lite": "^0.4.24",
+    "morgan": "^1.10.0",
     "puppeteer": "^9.0.0",
     "request": "^2.88.2",
     "sanitize-html": "^2.3.3"
